# movesense-ble-ecg-firmware

./: .gitignore  CHANGES.md  FAQ.md  LICENSE  MIGRATION.md  README.md  Vagrantfile
Mechanics/Accessories/: Movesense-clothes-clamp-assembly.stp  Movesense-surface-mount-assembly.stl  Movesense-surface-mount-assembly.stp
Mechanics/Sensor/: Movesense_sensor_3D.stl  Movesense_sensor_3D.stp
MovesenseCoreLib/: MovesenseFromStaticLib.cmake
MovesenseCoreLib/app-build/: flashing.cmake  functions.cmake  modules.cmake  prolog.cmake  sbem.cmake  toolchain-setup.cmake
MovesenseCoreLib/bootloader/: bootloader-SS2.hex  bootloader-SS2_NAND.hex  bootloader.hex
MovesenseCoreLib/documentation/: DataStorage.md  PowerOptimization.md
MovesenseCoreLib/include/: ApplicationPrePostInitialization.hpp  ApplicationServices.hpp  ApplicationStarter.hpp  BleController.hpp  BleNordicUART.hpp  BleService.hpp  BleStandardHRS.hpp  BleTestApplication.hpp  BleTestService.hpp  CalibrationService.hpp  DataLogger.hpp  DebugLogger.hpp  DebugMessageBuffer.hpp  DebugServiceInput.hpp  EepromService.hpp  ExtflashChunkStorage.h  FactoryCalibrationApplication.hpp  HardwareServices.hpp  HeapSizeValidator.hpp  IndicationService.hpp  LedService.hpp  Logbook.hpp  LogbookDb.hpp  LogbookEntryDb.hpp  ManufacturingService.hpp  MeasStorage.h  Sbem.hpp  SettingsService.hpp  SmartSensor2Application.hpp  StateOwner.hpp  StatesService.hpp  TwinSpi.h  chunkStorage.h  movesense.h  sbem_types.h  sessionStorage.h
MovesenseCoreLib/privatekeys/: privatekey-SS2.pem  privatekey-SS2_NAND.pem
MovesenseCoreLib/resources/: comm_ble.wbo  component_ds24l65.wbo  component_eeprom.wbo  component_led.wbo  component_lsm6ds3.wbo  component_max3000x.wbo  component_nrf52.wbo  datalogger.wbo  device_calibration.wbo  device_measurement_angularvelocity.wbo  device_measurement_temperature.wbo  device_system_debug.wbo  device_system_shutdown.wbo  device_systemevent.wbo  meas_acc.wbo  meas_ecg.wbo  meas_gyro.wbo  meas_hr.wbo  meas_imu.wbo  meas_magn.wbo  meas_temp.wbo  mem_datalogger.wbo  mem_logbook.wbo  misc_calibration.wbo  misc_gear.wbo  misc_manufacturing.wbo  movesense_info.wbo  movesense_root.yaml  movesense_time.wbo  movesense_types.wbo  suunto_augmented_heartrate.wbo  suunto_ble_test.wbo  suunto_dev_system.wbo  suunto_dev_time.wbo  suunto_device_component_DS24L65.wbo  suunto_device_component_LSM6DS3.wbo  suunto_device_component_MAX30004.wbo  suunto_device_component_led.wbo  suunto_device_manufacturing.wbo  suunto_device_measurement_linearacceleration.wbo  (+32 more)
MovesenseCoreLib/shared-build/: functions.cmake
MovesenseCoreLib/src/: movesense_heap.c
MovesenseCoreLib/toolchain/: gcc-nrf52.cmake
SampleApp/: AccelerometerSampleService.cpp  App.cpp  CMakeLists.txt  HelloWorldService.cpp  HelloWorldService.h  WhiteboardConfig.h  app_root.yaml  whiteboard-buildconfig.h.in
SampleApp/wbresources/: AccelerometerSample.yaml  HelloWorld.yaml
ble-ecg/: ActivityGATTSvcClient.cpp  ActivityGATTSvcClient.h  App.cpp  CMakeLists.txt  CustomGattTemplate.cpp  CustomGattTemplate.h  EcgGATTSvcClient.cpp  EcgGATTSvcClient.h  MovGATTSvcClient.cpp  MovGATTSvcClient.h  SeriesBuffer.h  WakeClient.cpp  WakeClient.h  app_root.yaml  config.h
ble-ecg/activity_logger/: EcgConstants.h  GattConfig.h  LoggingActivitySvcClient.cpp  LoggingActivitySvcClient.h
ble-ecg/experiment/: RateTestClient.cpp  RateTestClient.h
ble-ecg/offline_storage_client/: AbsoluteSeriesBuffer.h  ConfigurationField.h  GattConfig.h  MainClient.cpp  MainClient.h  MeasurementConfig.h  MeasurementProvider.cpp  MeasurementProvider.h  OfflineStorageGattClient.cpp  OfflineStorageGattClient.h  SensorStates.h
ble-ecg/oldversion/: ActivityGATTSvcClient.cpp  ActivityGATTSvcClient.h  EcgGATTSvcClient.cpp  EcgGATTSvcClient.h  MovGATTSvcClient.cpp
ble-ecg/reliable_activity_svc/: AutoClientAbsoluteSeriesBuffer.h  AutoClientConfigurationField.h  AutoClientGattConfig.h  AutoClientMeasurementConfig.h  DataProvider.cpp  DataProvider.h  MainClient.cpp  MainClient.h
ble-ecg/template/: CustomGattClient.cpp  CustomGattClient.h
ble-ecg/wbresources/: MeasurementProvider.yaml
html/: index.html  main.js
samples/: .clang-format  README.md
samples/1wire_app/: App.cpp  CMakeLists.txt  OneWireClient.cpp  OneWireClient.h
samples/1wire_temperature_app/: App.cpp  OneWireTempService.cpp  OneWireTempService.h  app_root.yaml
samples/_build/: flashing.cmake  prolog.cmake  sbem.cmake
samples/accel_int16_app/: CMakeLists.txt  IntegerAccelerometerApp.cpp  IntegerAccelerometerApp.yaml  IntegerAccelerometerService.cpp  IntegerAccelerometerService.h  ResourceForwardingTracker.cpp  ResourceForwardingTracker.h
samples/accelerometer_app/: AccelerometerSampleService.cpp  AccelerometerSampleService.h  App.cpp  app_root.yaml
samples/ble_conformance_test_app/: App.cpp  BleConformanceTesterService.cpp  BleConformanceTesterService.h  CMakeLists.txt  app_root.yaml
samples/ble_conformance_test_app/wbresources/: BleConformanceTester.yaml  resources.cpp
samples/ble_std_services/: App.cpp  BleServicesApp.cpp  BleServicesApp.hpp  CustomBleController.cpp  CustomBleController.hpp
samples/blinky_app/: App.cpp  BlinkyClient.cpp  BlinkyClient.h  app_root.yaml
samples/connection_reliability_test_app/: App.cpp  ConnectionReliabilityService.cpp  ConnectionReliabilityService.h  app_root.yaml
samples/connection_scanner_app/: App.cpp  ConnectionScanner.cpp  ConnectionScanner.h  app_root.yaml
samples/custom_bleadv_app/: App.cpp  CustomBLEAdv.cpp  CustomBLEAdv.h
samples/custom_gattsvc_app/: App.cpp  (+2 more)
tools/: wbcmd (OSX).dms  wbcmd.dms
(+736 files in other folders)
